Fix colour contrast on docs site

--- a/docs/assets/scss/_footer.scss
+++ b/docs/assets/scss/_footer.scss
@@ -9,15 +9,6 @@
   text-align: center;
   background-color: #f7f7f7;
 
-  a {
-    font-weight: 500;
-    color: $gray;
-
-    &:hover {
-      color: $link-color;
-    }
-  }
-
   p {
     margin-bottom: 0;
   }
